cmake_minimum_required(VERSION 3.13)
project(algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(algorithm main.cpp tools/print.h tools/print.cpp tools/ListNode.h tools/ListNode.cpp tools/TreeNode.h tools/TreeNode.cpp offer/offer22.h offer/offer23.h offer/offer24.h offer/offer25.h offer/offer26.h offer/offer27.h offer/offer28.h offer/offer29.h offer/offer30.h offer/offer31.h offer/offer32.h offer/offer33.h offer/offer34.h offer/offer35.h offer/offer36.h offer/offer.h offer/offer37.h offer/offer38.h offer/offer39.h offer/offer39v2.h offer/offer40.h offer/offer41v2.h offer/offer41.h offer/offer42.h offer/offer42v2.h offer/offer44.h offer/offer45.h offer/offer46.h offer/offer47.h offer/offer49.h offer/offer14.h leetcode/leetcode493.h leetcode/leetcode315.h leetcode/leetcode4.h leetcode/leetcode5.h leetcode/leetcode88.h leetcode/leetcode206.h leetcode/leetcode7.h leetcode/leetcode148.h leetcode/leetcode78.h leetcode/leetcode46.h leetcode/leetcode79.h leetcode/leetcode208.h)